--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
                     Download Resume
                 </button>
             </div>
+            <!-- Add social links here -->
+            <div class="social-links">
+                <a href="https://github.com/yourusername" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://linkedin.com/in/yourusername" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="mailto:your.email@example.com"><i class="fas fa-envelope"></i></a>
+            </div>
         </div>
     </section>
 
@@ -304,3 +310,34 @@
 
  <script src="script.js"></script>
 </html>
+
+<section id="skills" class="skills">
+    <h2 class="section-title" data-aos="fade-up">Technical Skills</h2>
+    <div class="skills-container" data-aos="fade-up">
+        <div class="skill-category">
+            <h3>Frontend</h3>
+            <div class="skill-items">
+                <div class="skill-item">HTML5</div>
+                <div class="skill-item">CSS3</div>
+                <div class="skill-item">JavaScript</div>
+                <div class="skill-item">React</div>
+            </div>
+        </div>
+        <div class="skill-category">
+            <h3>Backend</h3>
+            <div class="skill-items">
+                <div class="skill-item">Node.js</div>
+                <div class="skill-item">PHP</div>
+                <div class="skill-item">MongoDB</div>
+            </div>
+        </div>
+        <div class="skill-category">
+            <h3>Cybersecurity</h3>
+            <div class="skill-items">
+                <div class="skill-item">Penetration Testing</div>
+                <div class="skill-item">Network Security</div>
+                <div class="skill-item">Encryption</div>
+            </div>
+        </div>
+    </div>
+</section>
